# verus

./: COSC 540 Research Paper Presentation.pptx  Cargo.toml  FINAL_PRESENTATION.pptx  FINAL_REPORT_VERUS.tex  README.md  proposal.tex  verus.tex
.github/workflows/: test.yml
examples/: enum.vs  factorial.vs  struct.vs  test.vs
src/: cli.rs  expr.rs  lib.rs  main.rs  old_expr.rs  parser.rs
src/libraries/: io.rs  list.rs  math.rs  mod.rs  string.rs
