[package]
name = "verus"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.96"
clap = { version = "4.5.37", features = ["derive"] }
clover = { git = "https://github.com/adam-mcdaniel/clover" }
lazy_static = "1.5.0"
nom = "^7"
rand = "0.9.1"
thiserror = "2.0.11"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
